--- a/Project 2/src/App.css
+++ b/Project 2/src/App.css
@@ -42,3 +42,65 @@ nav {
     padding-left: 36px;
     line-height: 17.6px;
 }
+
+.card{
+    width: 275px;
+    font-size: 16px;
+    padding-left: 37px;
+    flex: 0 0 auto;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+
+.card_img{
+    width: 100%;
+    border-radius: 9px;
+    margin-bottom: 9px;
+}
+
+.card_stats{
+    display: flex;
+    align-items: center;
+    padding-top: 6px;
+}
+
+.cards_list {
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 20px;
+    overflow-x: auto;
+}
+
+.card_star{
+    height: 18px;
+    padding-right: 5px;
+}
+
+.card_title {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.card_price {
+    margin-top: auto;
+}
+
+.card_banner {
+    position: absolute;
+    top: 6px;
+    left: 46px;
+    background-color: white;
+    padding: 5px 7px;
+    border-radius: 2px;
+    font-weight: bold;
+}
+
+.gray{
+    padding-left: 3px;
+    color: #918E9B;
+}
+
+.bold{
+    font-weight: bold;
+}
