Added Black Window

--- a/Travel Journal/src/App.css
+++ b/Travel Journal/src/App.css
@@ -2,11 +2,23 @@
 body {
     margin: 0;
     font-family: 'Inter', sans-serif;
+    background-color: black;
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+    padding-top: 90px;
+
 }
 
+.innerDiv{
+    background-color: white;
+    width: 700px;
+    /* margin: 10px; */
+    padding-bottom: 50px;
+}
 nav{
     height: 50px;
-    width: 40%;
+    width: 100%;
     background-color: #F55A5A;
     display: flex;
     align-items: center;
@@ -34,8 +46,10 @@ nav{
 
 .card{
     padding-top: 50px;
-    padding-left: 100px;
+    /* padding-left: 50px; */
     display: flex;
+    justify-content: center;
+    
 }
 
 .card_img{
@@ -109,7 +123,7 @@ nav{
 }
 
 .card_description{
-    width: 330px;
+    width: 380px;
     font-family: Inter;
     color: #2B283A;
     font-size: 13px;
