--- a/AirBnB Clone/src/App.css
+++ b/AirBnB Clone/src/App.css
@@ -1,106 +1,106 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    margin: 0;
-    font-family: 'Poppins', sans-serif;
+  margin: 0;
+  font-family: "Poppins", sans-serif;
 }
 
 nav {
-    height: 70px;
-    display: flex;
-    padding-top: 22px;
-    padding-left: 30px;
-    box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
+  height: 70px;
+  display: flex;
+  padding-top: 22px;
+  padding-left: 30px;
+  box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
 }
 
-.nav_logo{
-    width: 82.02px;
-    height: 25.35px;
-    top: 22px;
-    left: 30px;
+.nav_logo {
+  width: 82.02px;
+  height: 25.35px;
+  top: 22px;
+  left: 30px;
 }
 
-.hero_img{
-    max-width: 800px;
-    height: 500px;
-    padding-top: 56px;
-    padding-left: 77px;
+.hero_img {
+  max-width: 800px;
+  height: 500px;
+  padding-top: 56px;
+  padding-left: 77px;
 }
 
-.hero_heading{
-    font-size: 36px;
-    line-height: 39.6px;
-    padding-top: 32px;
-    padding-left: 36px;
-    margin-bottom: 0;
+.hero_heading {
+  font-size: 36px;
+  line-height: 39.6px;
+  padding-top: 32px;
+  padding-left: 36px;
+  margin-bottom: 0;
 }
 
-.hero_text{
-    width: 380px;
-    padding-left: 36px;
-    line-height: 17.6px;
+.hero_text {
+  width: 380px;
+  padding-left: 36px;
+  line-height: 17.6px;
 }
 
-.card{
-    width: 275px;
-    font-size: 16px;
-    padding-left: 37px;
-    flex: 0 0 auto;
-    display: flex;
-    flex-direction: column;
-    position: relative;
+.card {
+  width: 275px;
+  font-size: 16px;
+  padding-left: 37px;
+  flex: 0 0 auto;
+  display: flex;
+  flex-direction: column;
+  position: relative;
 }
 
-.card_img{
-    width: 100%;
-    border-radius: 9px;
-    margin-bottom: 9px;
+.card_img {
+  width: 100%;
+  border-radius: 9px;
+  margin-bottom: 9px;
 }
 
-.card_stats{
-    display: flex;
-    align-items: center;
-    padding-top: 6px;
+.card_stats {
+  display: flex;
+  align-items: center;
+  padding-top: 6px;
 }
 
 .cards_list {
-    display: flex;
-    flex-wrap: nowrap;
-    gap: 20px;
-    overflow-x: auto;
+  display: flex;
+  flex-wrap: nowrap;
+  gap: 20px;
+  overflow-x: auto;
 }
 
-.card_star{
-    height: 18px;
-    padding-right: 5px;
+.card_star {
+  height: 18px;
+  padding-right: 5px;
 }
 
 .card_title {
-    overflow: hidden;
-    text-overflow: ellipsis;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .card_price {
-    margin-top: auto;
+  margin-top: auto;
 }
 
 .card_banner {
-    position: absolute;
-    top: 6px;
-    left: 46px;
-    background-color: white;
-    padding: 5px 7px;
-    border-radius: 2px;
-    font-weight: bold;
+  position: absolute;
+  top: 6px;
+  left: 46px;
+  background-color: white;
+  padding: 5px 7px;
+  border-radius: 2px;
+  font-weight: bold;
 }
 
-.gray{
-    padding-left: 3px;
-    color: #918E9B;
+.gray {
+  padding-left: 3px;
+  color: #918e9b;
 }
 
-.bold{
-    font-weight: bold;
+.bold {
+  font-weight: bold;
 }
