Completed Meme Generator Project

--- a/Meme Generator/src/App.css
+++ b/Meme Generator/src/App.css
@@ -42,9 +42,9 @@ main {
   font-weight: 500;
 }
 
-form {
+.form {
   display: grid;
-  grid-template: 100% 100% / 1fr 1fr;
+  grid-template: 40px 40px / 1fr 1fr;
   gap: 20px;
 }
 
@@ -80,4 +80,40 @@ form {
   color: white;
   border: none;
   cursor: pointer;
+}
+
+.meme {
+  position: relative;
+}
+
+.memeImage {
+  max-width: 100%;
+  padding-top: 100px;
+  border-radius: 3px;
+}
+
+.memeText {
+  position: absolute;
+  width: 80%;
+  text-align: center;
+  left: 50%;
+  transform: translateX(-50%);
+  margin: 15px 0;
+  padding: 0 5px;
+  font-family: impact, sans-serif;
+  font-size: 2em;
+  text-transform: uppercase;
+  color: white;
+  letter-spacing: 1px;
+  text-shadow: 2px 2px 0 #000, -2px -2px 0 #000, 2px -2px 0 #000,
+    -2px 2px 0 #000, 0 2px 0 #000, 2px 0 0 #000, 0 -2px 0 #000, -2px 0 0 #000,
+    2px 2px 5px #000;
+}
+
+.top {
+  top: 0;
+}
+
+.bottom {
+  bottom: 0;
 }
